# cookiecutter-pypackage

./: .gitignore  README.rst  cookiecutter.json
{{cookiecutter.pypi_package_name}}/: AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.rst  justfile  pyproject.toml
{{cookiecutter.pypi_package_name}}/.github/workflows/: test.yml
{{cookiecutter.pypi_package_name}}/docs/: conf.py  index.rst  notebooks.rst  reference.rst
{{cookiecutter.pypi_package_name}}/docs/notebooks/: notebook1.nblink  notebook2.nblink
{{cookiecutter.pypi_package_name}}/notebooks/: notebook1.ipynb  notebook2.ipynb
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  utils.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.pypi_package_name}}/tests/: test.py  test_hello.py
